tests/error/linear_errors/for_break.err
Guppy compilation failed. Error in file $FILE:17

15:    rs += [q]
16:    if b:
17:        break
           ^^^^^
GuppyTypeError: Loop over iterator with linear type `linst[(qubit, bool)]` cannot be terminated prematurely
